# claw-conductor

./: .gitignore  README.md  exa.skill  pyproject.toml
demo_project/: app.py  greeter.py  report_ui.py
demo_project/templates/: run_detail.html  runs.html
docs/features/F-001/: feature.md
docs/features/F-002/: feature.md
docs/features/F-003/: feature.md
runs/F-001-20260131-141821/: ledger.jsonl
runs/F-001-20260131-141821/plan/: plan.md
runs/F-001-20260131-141821/usage/: codex-status-post-plan.json  codex-status-post-plan.txt
runs/F-001-20260131-141930/: ledger.jsonl
runs/F-001-20260131-141952/: ledger.jsonl
runs/F-001-20260131-141952/execute/: claude-output.txt
runs/F-001-20260131-141952/publish/: report.json
runs/F-001-20260131-141952/review/: review.md
runs/F-001-20260131-141952/usage/: codex-status-pre-review.json  codex-status-pre-review.txt
runs/F-001-20260131-141952/verify/: pytest.txt
skills/exa/: SKILL.md
skills/exa/references/: api.md  examples.md
skills/exa/scripts/: exa_company.py  exa_crawl.py  exa_deep_research.py  exa_linkedin.py  exa_search.py
src/orch/: allowlist.py  cli.py  codex_status.py  config.py  ledger.py  runner.py  shell.py  tools.py  types.py
tests/: test_e2e.py  test_greeter_cli.py  test_integration.py  test_report_ui.py  test_smoke_orch_run.py
tools/: fake_claude.py  fake_codex.py
