[project]
name = "orch"
version = "0.1.0"
description = "Local orchestration CLI: Codex for PLAN/REVIEW, Claude Code for EXECUTE/FIX"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenClaw" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.4",
  "pydantic-settings>=2.3.4",
]

[project.scripts]
orch = "orch.cli:app"

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.2",
  "pytest-xdist>=3.6.1",
  "httpx>=0.27.2",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.1",
]

[tool.pytest.ini_options]
addopts = "-q"

testpaths = ["tests"]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orch", "demo_project"]
